--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,1 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
+@import url('https://fonts.googleapis.com/css?family=Dosis');
+@import url('https://fonts.googleapis.com/css?family=HomemadeApple');
+@import url('https://fonts.googleapis.com/css?family=Dosis:300,700');
+@import url('https://fonts.googleapis.com/css?family=UnuntuMono:300,700');
