--- a/css/main.css
+++ b/css/main.css
@@ -5,24 +5,376 @@
 html, body {
   margin: 0;
   padding: 0;
+  font-family: Dosis, sans-serif;
+  background-color: rgba(234,237,237 ,1);
+  z-index: 1;
+  
 }
 
-body {
+/**
+* ————————-
+* @hero image
+* ————————-
+*/
+
+.hero {
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
-  background: rgba(26,35,126 ,1) url('../assets/images/home.jpg') no-repeat center center fixed;
+  background: url('https://68.media.tumblr.com/8bb9d1e4195eb6225083bfd21f83ae51/tumblr_oonqjikiY21u85m4oo1_1280.jpg') no-repeat;
   background-size: cover;
-
-  color: rgba(232,234,246 ,1);
+  background-position: center center;
+  width: 100%;
+  height: 830px;
+  position: relative;
+  
 }
 
-.intro {
-  width: 90vw;
+.icoon_down {
+  position: relative;
+  left: 47%;
+  Top: 115px;
+}
 
-  padding: 1rem;
-  margin-top: 1rem;
+  .logo_hoek{
+    position: absolute;
+    text-align: left;
+    margin-top: 10px;
+    margin-left: 20px;
+  }
 
-  background: rgba(41,182,246 ,1);
-  color: rgba(1,87,155 ,1);
+  #logo {
+      z-index: 1;
+      position: absolute;
+      top: 26%;
+      left: 36%;
+    }
+
+
+ 
+ /* Navigation */
+#hoofdnavigatie-wrapper * {
+    box-sizing: border-box;
+}
+#hoofdnavigatie-wrapper{
+    background:rgba(255, 255, 255, 0);}
+
+.navigatie_kader {
+    z-index: 2;
+    background-color: rgba(78, 52, 89, 1);
+    height: 67px;
+    text-align: right;
+    position:absolute;
+    right: 0;
+    top: 0;
+    left: 0; 
+}
+   
+
+#hoofdnavigatie{
+    list-style:none;
+    font-family: Dosis, sans-serif;
+    font-size:16px;
+    background: rgba(255, 255, 255, 0);
+    display: inline-block;
+    padding: 2px 2px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    margin-top: 2px;
+    background: transparent;
+    transition: all 0.2s ease-in-out;
+}
+
+#hoofdnavigatie > ul {
+    list-style:none;
+    margin:0;
+    padding:0;
+}
+#hoofdnavigatie > ul > li {
+    display:block;
+    float:right;
+    position:relative;
+}
+#hoofdnavigatie > ul > li > a {
+    display:block;
+    text-decoration:none;
+    padding:2px 15px;
+    color: white;;
+    font-weight: 350;
+    text-transform: uppercase;
+    border: 2px solid white; 
+    height: 30px;
+    margin: 10px;
+}
+
+#hoofdnavigatie > ul > li > a:hover,
+#hoofdnavigatie > ul > li:hover > a,
+#hoofdnavigatie > ul > li > a:focus,
+#hoofdnavigatie > ul > li:focus > a,
+#hoofdnavigatie > ul >  a
+{
+  
+  padding-bottom: 3px;
+  background: transparent;
+  transition:all 360ms ease-in 0.2;}
+
+.knop {
+  display: inline-block;
+  padding: 2px;
+  padding-right: 20px;
+  padding-left: 20px;
+
+  text-decoration: none;
+  color: white;
+  margin-top: 2px;
+  background: transparent;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+  position: relative;
+  text-transform: uppercase;
+  text-align: center;
+  top: 4px;
+  
+}
+
+.knop span {
+  transition: all 0.2s ease-in-out;
+  
+}
+
+.knop .fa { position: absolute;
+  font-size: 1.2rem;
+  top: 50%;
+  -webkit-transform: translateY(-40%);
+      -ms-transform: translateY(-40%);
+          transform: translateY(-40%);
+  right: -30px;
+  transition: 0.4s right cubic-bezier(0.38, 0.6, 0.48, 1);
+  
+  
+}
+
+.knop:hover {
+
+  padding-bottom: 3px;
+  background: transparent;
+  transition:all 360ms ease-in 0.2;}
+
+.knop:hover span{
+  margin-right: 10px;}
+
+.knop:hover .fa {
+  right: 10px;
+}
+
+#knop_kleur {
+  color: rgba(78, 52, 89, 1);
+  border-color: rgba(78, 52, 89, 1);
+   text-align: center;
+   display: inline-block;
+}
+
+/* Footer */
+.footer_wrapper {
+  background-color: rgba(78, 52, 89, 1);
+}
+
+.footer {
+    height: 50px;
+    color: white;
+    padding-top: 10px;
+    
+}
+#tekst_footer{font-family: Dosis, sans-serif;
+color:white;
+text-align: center;}
+
+#tekst_footer span {
+  margin-right: 10px;
+}
+#tekst_footer span i {
+  margin-right: 5px;
+}
+
+#knop_contact {border-color: white;}
+
+button {color: white;
+background-color: rgba(125, 125, 125, 0.0);
+border: 2px solid white; 
+margin: 10px;
+font-family: Dosis;
+ text-align: center;}
+
+
+  /**
+* ————————-
+* @begin inhoud
+* ————————-
+*/
+
+.paars_vak {
+  position: relative;
+  text-align: center;
+  background: rgba(78, 52, 89, 1);
+  width: 100%;  
+  height: 100px;
+  margin: 0 auto;}
+
+.geel_vak {
+  position: relative;
+  text-align: center;
+  background: rgba(253, 210, 0, 1);
+  width: 100%;  
+  margin: 0 auto;
+  }
+
+article {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.grijs {
+  padding: 20px;
+}
+
+#links {
+  left: 20%;
+}
+
+.icoon_diensten {
+    display: block;
+    margin: 0 auto;
+  }
+
+.icoon_dienst {
+  display: block;
+  margin: 0 auto;
+}
+
+
+figure.team {
+  background: rgba(6, 5, 7, 1);
+  position: relative;
+  float: center;
+  overflow: hidden;
+  margin: auto 0;
+  min-width: 300px;
+  max-width: 300px;
+  text-align: center;
+  }
+
+figure.team * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+  margin: auto 0;
+}
+
+figure.team img {
+  max-width: 100%;
+  vertical-align: top;
+  margin: auto 0;
+
+}
+figure.team .logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 70px;
+  height: 70px;
+  line-height: 70px;
+  -webkit-transform: translate(-50%, -50%) scale(0);
+  transform: translate(-50%, -50%) scale(0);
+  transition: all 300ms 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+}
+
+
+figure.team:hover img{
+  opacity: 0.3;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  
+}
+figure.team:hover .logo {
+  -webkit-transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(1);
+  transition: all 500ms 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+input {
+  font-family: Dosis, sans-serif;
+  color:rgba(78, 52, 89, 1);
+  font-size: 15px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid rgba(78, 52, 89, 1);
+  margin-left: 15px;
+  margin-bottom: 10px;}
+
+
+input:focus::-webkit-input-placeholder {
+  color:  rgba(78, 52, 89, 1);
+}
+
+#balk_form {
+  width: 500px;
+}
+
+input:focus, textarea:focus a:focus{outline: none;}
+
+figure.portfolio {
+  background: rgba(6, 5, 7, 1);
+  position: relative;
+  float: center;
+  overflow: hidden;
+  margin: 20px;
+  min-width: 300px;
+  max-width: 300px;
+  text-align: center;
+  }
+
+figure.portfolio * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+
+figure.portfolio img {
+  max-width: 100%;
+  vertical-align: top;
+
+}
+figure.portfolio .knop {
+  width: 150px;
+  padding-left: 10px;
+  padding-right: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(0);
+  transform: translate(-50%, -50%) scale(0);
+  transition: all 300ms 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+}
+
+
+figure.portfolio:hover img{
+  opacity: 0.3;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  
+}
+figure.portfolio:hover .knop {
+  -webkit-transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(1);
+  transition: all 500ms 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+
+ul, span {
+  padding: 20px;
+}
+iframe {
+  padding-top: 50px;
 }
